--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,11 +5,7 @@
     <meta name="robots" content="noindex" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>
-      {{ title | safe }}
-      {{ '&ndash;' | safe if title }}
-      {{ site.title | safe }}
-    </title>
+    <title>{{ title | safe }}{{ ' — ' | safe if title }}{{ site.title | safe }}</title>
     <meta name="description" content="..." />
 
     {%- include "partials/fonts.njk" -%}
