--- a/src/pages/soknad-og-skjema/privat/privat.njk
+++ b/src/pages/soknad-og-skjema/privat/privat.njk
@@ -14,6 +14,9 @@ permalink: "/soknad-og-skjema/"
 {%- from "macros/microcard.njk" import microcard -%}
 {%- from "macros/filterGroup.njk" import filterGroup -%}
 
+{%- set areasByProducts = products | extractTags('area') -%}
+{%- set typesByProducts = products | extractTags('type') -%}
+
 {%- block content -%}
   {% include "partials/language.njk" %}
 
@@ -114,13 +117,13 @@ permalink: "/soknad-og-skjema/"
               <form class="mt-8 bg-white col-narrow">
                 <div class="relative grid gap-8">
                   {{ filterGroup({
-                    array: areaFilter,
+                    array: (areasByProducts | sortStringLast('Annet')),
                     title: 'Velg område',
                     value: 'areaFilter',
                     showAll: true
                   }) }}
                   {{ filterGroup({
-                    array: typeFilter,
+                    array: (typesByProducts | sort(true, false) | reverse),
                     title: 'Velg type',
                     value: 'typeFilter',
                     showAll: true
@@ -142,13 +145,13 @@ permalink: "/soknad-og-skjema/"
               </div>
             </div>
             {{ filterGroup({
-              array: areaFilter,
+              array: (areasByProducts | sortStringLast('Annet')),
               title: 'Velg område',
               value: 'areaFilter',
               showAll: true
             }) }}
             {{ filterGroup({
-              array: typeFilter,
+              array: (typesByProducts | sort(true, false) | reverse),
               title: 'Velg type',
               value: 'typeFilter',
               showAll: true
