--- a/src/pages/soknad-og-skjema/samarbeidspartner/rolle.njk
+++ b/src/pages/soknad-og-skjema/samarbeidspartner/rolle.njk
@@ -22,8 +22,8 @@
 {%- from "macros/microcard.njk" import microcard -%}
 {%- from "macros/filterGroup.njk" import filterGroup -%}
 
-{%- set productsLength = products | productsByRole(role) | length -%}
-{%- set reducedTypeFilter = products | productTypesFromProductRole(role) | sort(true, false) | reverse -%}
+{%- set productsByRole = products | filterByArray(role) -%}
+{%- set typesByProducts = productsByRole | extractTags('type') | sort(true, false) | reverse -%}
 
 {%- block content -%}
   {% include "partials/language.njk" %}
@@ -84,7 +84,7 @@
 
       <div class="md:col-start-2 md:grid md:grid-cols-[2fr_1fr] gap-x-16 items-start gap-4 mt-6">
 
-        {%- if productsLength > 7 -%}
+        {%- if (productsByRole | length) > 7 -%}
           <div class="md:col-start-2 md:row-start-1" x-data="{ filterDrawer: false }">
 
             <div class="mb-8 md:hidden">
@@ -116,7 +116,7 @@
               <form class="mt-8 bg-white col-narrow">
                 <div class="relative grid gap-8">
                   {{ filterGroup({
-                    array: typeFilter,
+                    array: typesByProducts,
                     title: 'Velg type',
                     value: 'typeFilter',
                     showAll: true
@@ -138,7 +138,7 @@
               </div>
             </div>
             {{ filterGroup({
-              array: reducedTypeFilter,
+              array: typesByProducts,
               title: 'Velg type',
               value: 'typeFilter',
               showAll: true
@@ -148,11 +148,10 @@
         {%- endif -%}
 
         <div class="md:col-start-1 md:row-start-1">
-          <p class="mb-2">Viser <span x-text="count"></span> av {{ productsLength }}  tjenester</p>
+          <p class="mb-2">Viser <span x-text="count"></span> av {{ (productsByRole | length) }}  tjenester</p>
 
           <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
-            {%- for product in products | sort(true, false, 'title') | reverse -%}
-              {%- if role in product.role -%}
+            {%- for product in productsByRole | sort(true, false, 'title') | reverse -%}
               <div
                 x-data="{ expanded: false }"
                 class="border-t focus-within:z-10 c-product-tile border-deepblue-100"
@@ -199,7 +198,6 @@
                   {%- endif -%}
                 </div>
               </div>
-              {%- endif -%}
             {%- endfor -%}
           </div>
           <div x-show="count === 0" class="p-6 py-8 text-center overflow-hidden grid items-center leading-snug rounded-lg bg-gray-100 min-h-[4.75rem] lg:col-span-6">
