Maksbredde på søkefelt

--- a/src/pages/soknad-og-skjema/privat/privat.njk
+++ b/src/pages/soknad-og-skjema/privat/privat.njk
@@ -144,7 +144,7 @@ permalink: "/soknad-og-skjema/"
               value: 'typeFilter',
               showAll: true
             }) }}
-            <div>
+            <div class="max-w-sm">
               <label for="searchFilter-desktop" class="font-semibold">Finn tjeneste</label>
               <div class="relative mt-2">
                 <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
