--- a/src/_includes/blank.njk
+++ b/src/_includes/blank.njk
@@ -17,29 +17,14 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2299%22>🧑‍💻</text></svg>" />
     <link rel="preconnect" href="https://www.nav.no" crossorigin />
     <link rel="preload" href="/assets/fonts/SourceSans3-normal-latin.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="stylesheet" href="/assets/main.min.css" type="text/css" />
-    {%- block styles -%}{%- endblock -%}
+    <link rel="stylesheet" href="/assets/main.min.css" type="text/css" />    {%- block styles -%}{%- endblock -%}
     <script src="/assets/alpine.min.js" type="text/javascript" defer></script>
     {%- block script -%}{%- endblock -%}
   </head>
-  <body
-    class="min-h-full leading-normal overflow-x-hidden overflow-y-scroll {{ bodyClass }}"
-    x-data="{
-      indexOpen: false,
-      audienceDropdownOpen: false,
-      loggedIn: true,
-      loginOpen: false,
-      menuOpen: false,
-      notifyOpen: false,
-      newNotifications: true
-    }">
+  <body class="">
     {%- if environment === 'production' -%}
     {%- include "partials/banner.njk" -%}
     {%- endif -%}
-
-    {%- include "partials/header-new.njk" -%}
     {%- block content -%}{%- endblock -%}
-    {%- include "partials/footer.njk" -%}
-    {%- include "partials/prototypeNav.njk" -%}
   </body>
 </html>
