--- a/src/_includes/partials/header-new.njk
+++ b/src/_includes/partials/header-new.njk
@@ -1,75 +1,54 @@
 {%- set audience = audienceOverride or menu.audience -%}
 
-<header class="relative z-50 grid bg-white grid-cols-layout shadow-border" >
+<header class="relative z-50 grid bg-white grid-cols-layout shadow-border isolate">
 
-  {# Audience Dropdown #}
-  <div class="relative z-50 grid justify-center bg-gray-100 isolate col-full md:hidden">
-    <button class="flex items-center fine:hover:underline text-lg justify-center gap-2 px-4 w-full py-1.5 focus:outline-none focus-visible:text-white focus-visible:bg-blue-500" x-on:click="audienceDropdownOpen = !audienceDropdownOpen, menuOpen = false, notifyOpen = false">
-      {%- if ('samarbeidspartner' in (page.url | string)) -%}
-      <span>{{ menu.audience[2].title }}</span>
-      {%- elif ('arbeidsgiver' in (page.url | string)) -%}
-      <span>{{ menu.audience[1].title }}</span>
-      {%- elif (not 'soknad-og-skjema-' in (page.url | string)) -%}
-      <span>{{ menu.audience[0].title }}</span>
-      {%- endif -%}
-      {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-4 h-4') | safe }}
-    </button>
-    <div class="absolute z-50 w-full -translate-x-1/2 left-1/2 top-full">
-      <div class="grid items-start bg-gray-100 grid-cols-layout">
-        <ul class="grid pt-4 pb-6 text-gray-900 xs:grid-flow-col auto-cols-fr gap-y-1 gap-x-2 col-wide"  x-show="audienceDropdownOpen" x-on:click.outside="audienceDropdownOpen = false">
-          {%- for item in audience -%}
-            <li class="grid flex-1">
-              <a x-on:click="audienceDropdownOpen = false" href="{{ item.href or '#' }}" class="py-2 px-3 bg-white border-2 rounded-lg focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 {{ 'border-blue-500' if activeRole === item.title or activeRole === '' else 'border-transparent fine:hover:border-gray-400' }}">
-                {{ item.title | safe }}
-              </a>
-            </li>
-          {%- endfor -%}
-        </ul>
-      </div>
-    </div>
-  </div>
+  <nav class="col-full md:col-wide grid grid-cols-[auto_auto_1fr] justify-center sm:gap-x-16">
 
-
-  <nav class="flex items-center w-full gap-8 col-wide">
     {# Logo #}
-    <a href="/" class="text-red-500 fine:hover:text-red-400 block focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 py-2.5 px-2 -ml-2 rounded-sm">
-      {{ '/src/_includes/svg/logo.svg' | svgContents('w-16 sm:w-[75px] h-auto') | safe }}
-      <span class="sr-only">NAV</span>
-    </a>
+    <div class="flex items-center order-1 p-2 pl-clamp-gap md:pl-0">
+      <a href="/" class="block p-2 text-red-500 rounded-sm fine:hover:text-red-400 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 xs:-ml-2">
+        {{ '/src/_includes/svg/logo.svg' | svgContents('w-auto h-5') | safe }}
+        <span class="sr-only">NAV</span>
+      </a>
+    </div>
 
     {# Audience #}
-    <div class="relative self-stretch hidden px-5 isolate md:grid">
-      <ul class="flex justify-center gap-4 text-lg">
-        {%- for item in audience -%}
-          <li class="grid">
-            <a href="{{ item.href or '#' }}" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 flex items-center px-0.5 pb-5 text-gray-900 border-b-4 pt-6 {{ 'border-blue-500 font-semibold' if activeRole === item.title else 'border-transparent fine:hover:border-gray-300/75 opacity-70' }}">
-              {{ item.title }} {{ item.active }}
-            </a>
-          </li>
-        {%- endfor -%}
-      </ul>
-    </div>
+    <ul class="flex justify-center col-span-3 gap-3 bg-gray-100 md:order-2 md:col-span-1 md:bg-transparent xs:gap-6 md:text-lg">
+      {%- for item in audience -%}
+        <li class="grid pt-2 pb-2.5 items-center {{ 'shadow-menuActive font-semibold' if activeRole === item.title else ' opacity-70 hover:opacity-100 transition-shadow hover:shadow-menuHover' }}">
+          <a href="{{ item.href or '#' }}" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 ">
+            {{ item.title }} {{ item.active }}
+          </a>
+        </li>
+      {%- endfor -%}
+    </ul>
 
     {# Menu Buttons #}
-    {%- set menuButtonClasses = "flex flex-col sm:flex-row items-center justify-center p-1 sm:pl-2.5 sm:pr-3 leading-none font-semibold gap-0.5 text-blue-500 rounded min-w-16 sm:py-2 sm:text-lg fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group" -%}
-    <div class="flex items-end gap-1.5 ml-auto py-1.5 -mt-px -mr-2 sm:py-3 sm:mr-0 sm:gap-2">
-      <button class="{{ menuButtonClasses }}" x-show="!loggedIn" x-on:click="loginOpen = !loginOpen">
-          {{ '/src/_includes/svg/icons/login.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
+    {%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center p-1 xs:pl-2.5 xs:pr-3 leading-none font-semibold gap-0.5 text-blue-500 rounded min-w-16 xs:py-2 xs:text-lg fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group" -%}
+
+
+    <div class="flex self-center order-3 col-span-2 gap-2 py-2 justify-self-end md:col-span-1 pr-clamp-gap md:pr-0 xs:-mr-2.5">
+      <button class="{{ menuButtonClasses }}" x-show="!loggedIn" x-on:click="loginOpen = !loginOpen, menuOpen = false">
+          {{ '/src/_includes/svg/icons/login.svg' | svgContents('w-6 h-6 xs:w-7 xs:h-7 shrink-0 pointer-events-none') | safe }}
         <span class="mt-px">Logg inn</span>
       </button>
 
+      {%- include "partials/login.njk" -%}
+
       <button class="{{ menuButtonClasses }}" x-on:click="notifyOpen = !notifyOpen, menuOpen = false" x-bind:class="notifyOpen && 'bg-deepblue-50'" x-show="loggedIn">
         <span class="relative">
-          {{ '/src/_includes/svg/icons/person-circle.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
+          {{ '/src/_includes/svg/icons/person-circle.svg' | svgContents('w-6 h-6 xs:w-7 xs:h-7 shrink-0 pointer-events-none') | safe }}
           <span x-show="newNotifications" class="absolute right-0 block w-1.5 h-1.5 sm:w-2 sm:h-2 bg-red-400 rounded-full top-0.5" x-bind:class="notifyOpen ? 'ring-2 ring-deepblue-50' : 'ring-2 ring-white fine:group-hover:ring-deepblue-50'"></span>
         </span>
-        <span class="mt-px sm:hidden">Min side</span>
-        <span class="hidden mt-px sm:inline-block">Isac Norland</span>
+        <span class="mt-px xs:hidden">Min side</span>
+        <span class="hidden mt-px xs:inline-block">Isac Norland</span>
       </button>
 
-      <span class="self-stretch hidden w-px my-2 bg-gray-300 sm:m-1 sm:block" aria-hidden="true"></span>
+      {%- include "partials/notifications.njk" -%}
 
-      <button class="{{ menuButtonClasses }}" type="button" x-on:click="menuOpen = !menuOpen, notifyOpen = false" x-bind:class="menuOpen && 'bg-deepblue-50'">
+      <span class="self-stretch hidden w-px my-2 bg-gray-300 sm:block" aria-hidden="true"></span>
+
+      <button class="{{ menuButtonClasses }}" type="button" x-on:click="menuOpen = !menuOpen, notifyOpen = false, loginOpen = false" x-bind:class="menuOpen && 'bg-deepblue-50'">
         <template x-if="!menuOpen">
           {{ '/src/_includes/svg/icons/menusearch.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
         </template>
@@ -78,15 +57,14 @@
         </template>
         <span class="mt-px">Meny</span>
       </button>
+
+      {%- include "partials/navigation.njk" -%}
     </div>
-  </nav>
+  </div>
 </header>
 
 
 
-{%- include "partials/navigation.njk" -%}
-{%- include "partials/notifications.njk" -%}
-{%- include "partials/login.njk" -%}
 
 {# Overlay #}
-<button class="fixed inset-0 z-30 w-full h-full bg-black/50" x-bind:class="(menuOpen || notifyOpen || audienceDropdownOpen || loginOpen) ? 'animate-fade-in' : 'hidden'" x-on:click="menuOpen = false, notifyOpen = false, audienceDropdownOpen = false, loginOpen = false" x-on:keyup.escape.window="menuOpen = false, notifyOpen = false, audienceDropdownOpen = false, loginOpen = false"></button>
+<button class="fixed inset-0 z-30 w-full h-full opacity-0 bg-black/20" x-bind:class="(menuOpen || notifyOpen || audienceDropdownOpen || loginOpen) ? 'animate-fade-in' : 'hidden'" x-on:click="menuOpen = false, notifyOpen = false, audienceDropdownOpen = false, loginOpen = false" x-on:keyup.escape.window="menuOpen = false, notifyOpen = false, audienceDropdownOpen = false, loginOpen = false"></button>
