--- a/src/_includes/partials/notifications.njk
+++ b/src/_includes/partials/notifications.njk
@@ -1,6 +1,6 @@
 {# Notifications #}
 <div class="absolute inset-x-0 z-40 grid w-full top-full grid-cols-layout" x-bind:class="notifyOpen ? 'opacity-0 animate-dropdown' : 'hidden'">
-  <div class="xs:max-w-xl bg-white rounded-b-lg shadow-xl md:max-h-[92vh] col-full xs:col-wide xs:justify-self-end">
+  <div class="sm:max-w-xl bg-white rounded-b-lg shadow-xl md:max-h-[92vh] col-full sm:col-wide sm:justify-self-end">
     <div class="px-clamp-gap sm:px-6">
       <p class="grid pt-5 pb-4" x-on:click="newNotifications = !newNotifications">
         <span class="text-sm tracking-wider uppercase opacity-80">Logget inn</span>
