--- a/src/pages/ettersende-dokumentasjon/ettersende-dokumentasjon.njk
+++ b/src/pages/ettersende-dokumentasjon/ettersende-dokumentasjon.njk
@@ -4,6 +4,7 @@ title: 'Ettersende dokumentasjon'
 kicker: 'Fra A til Å'
 description: 'Finn søknad eller skjema du skal ettersende dokumentasjon til.'
 tags: ['template']
+order: 3
 permalink: '/ettersende-dokumentasjon/'
 ---
 {%- extends 'base.njk' -%}
