--- a/src/pages/soknad-og-skjema/privat/privat.njk
+++ b/src/pages/soknad-og-skjema/privat/privat.njk
@@ -5,6 +5,7 @@ kicker: 'Fra A til Å'
 description: 'Finn søknad og skjema til pengestøtter og tjenester fra NAV.'
 tags: ['template']
 activeRole: "Privat"
+order: 2
 permalink: "/soknad-og-skjema/"
 ---
 {%- extends 'base.njk' -%}
