--- a/src/pages/soknad/dagpenger/dagpenger.njk
+++ b/src/pages/soknad/dagpenger/dagpenger.njk
@@ -12,6 +12,7 @@
     kicker: "Søknad",
     stepTitle: "{{ step.title }}",
     permalink: "/soknad/dagpenger{{ '-' + pagination.pageNumber if pagination.pageNumber >= 1 }}/",
+    order: "5"
   }
 }
 ---
