--- a/src/_includes/blank.njk
+++ b/src/_includes/blank.njk
@@ -22,7 +22,7 @@
     {%- block script -%}{%- endblock -%}
   </head>
   <body
-    class=""
+    class="{{ bodyClass }}"
     x-data="{
       indexOpen: false,
       audienceDropdownOpen: false,
