--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -4,7 +4,7 @@
       {{ '/src/_includes/svg/icons/helmet.svg' | svgContents('w-6 h-6 md:w-8 md:h-8 mb-1') | safe }}
     </div>
     <div class="max-w-[50ch]">
-      <p><strong>Hei!</strong> Dette er en bare en prototype til testing og utvikling.
+      <p><span class="font-semibold">Hei!</span> Dette er en bare en prototype til testing og utvikling.
       <a class="text-blue-300 underline fine:hover:no-underline fine:hover:text-orange-300" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.</p>
     </div>
   </div>
