--- a/src/404.njk
+++ b/src/404.njk
@@ -4,7 +4,7 @@ activeRole: 'Privat'
 showPrototypeNav: false
 kicker: 'Feilkode 404'
 title: 'Fant ikke siden'
-description: 'Siden kan være flyttet, slettet eller så var det en feil i lenken.'
+description: 'Siden kan være flyttet, slettet eller det er en feil i lenken.'
 bodyClass: 'flex flex-col min-h-full'
 ---
 {% extends "blank.njk" %}
