--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -38,7 +38,7 @@
         <ul class="flex justify-center flex-1 gap-4 pt-3 overflow-hidden text-lg" x-bind:class="audienceDropdownOpen ? 'grid' : 'flex'">
           {%- for item in audience -%}
             <li class="grid">
-              <a href="{{ item.href or '#' }}" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 flex items-center py-2 px-0.5 pb-4 text-gray-900 border-b-4 {{ 'border-blue-500 font-semibold' if activeRole === item.title else 'border-transparent fine:hover:border-gray-300/75 text-gray-700' }}">
+              <a href="{{ item.href or '#' }}" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 flex items-center py-2 px-0.5 pb-4 border-b-4 {{ 'border-blue-500 font-semibold text-gray-900' if activeRole === item.title else 'border-transparent fine:hover:border-gray-300/75 text-gray-700' }}">
                 {{ item.title }} {{ item.active }}
               </a>
             </li>
